/home/stanoo/.profile

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
- font_family      Fantasque Sans Mono Regular      
+ font_family      Iosevka Nerd Font      
  #SpaceMono-Regular
  bold_font        auto
  italic_font      auto
@@ -190,7 +190,7 @@
 
 #: Scrollback {{{
 
-# scrollback_lines 2000
+scrollback_lines 2000
 
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand. Negative numbers are (effectively)
@@ -199,7 +199,7 @@
 #: also use large amounts of RAM. Instead, consider using
 #: scrollback_pager_history_size.
 
-# scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
+ scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 
 #: Program with which to view scrollback in a new window. The
 #: scrollback buffer is passed as STDIN to this program. If you change
@@ -268,13 +268,13 @@
 #: The set of URL prefixes to look for when detecting a URL under the
 #: mouse cursor.
 
-# detect_urls yes
+ detect_urls yes
 
 #: Detect URLs under the mouse. Detected URLs are highlighted with an
 #: underline and the mouse cursor becomes a hand over them. Even if
 #: this option is disabled, URLs are still clickable.
 
-# copy_on_select no
+ copy_on_select yes
 
 #: Copy to clipboard or a private buffer on select. With this set to
 #: clipboard, simply selecting text with the mouse will cause the text
@@ -284,29 +284,29 @@
 #: instead. Map a shortcut with the paste_from_buffer action to paste
 #: from this private buffer. For example::
 
-#:     map cmd+shift+v paste_from_buffer a1
+ map cmd+shift+v paste_from_buffer a1
 
 #: Note that copying to the clipboard is a security risk, as all
 #: programs, including websites open in your browser can read the
 #: contents of the system clipboard.
 
-# strip_trailing_spaces never
+ strip_trailing_spaces never
 
 #: Remove spaces at the end of lines when copying to clipboard. A
 #: value of smart will do it when using normal selections, but not
 #: rectangle selections. always will always do it.
 
-# rectangle_select_modifiers ctrl+alt
+ rectangle_select_modifiers ctrl+alt
 
 #: The modifiers to use rectangular selection (i.e. to select text in
 #: a rectangular block with the mouse)
 
-# terminal_select_modifiers shift
-
+ terminal_select_modifiers shift
+#
 #: The modifiers to override mouse selection even when a terminal
 #: application has grabbed the mouse
 
-# select_by_word_characters @-./_~?&=%+#
+ select_by_word_characters @-./_~?&=%+#
 
 #: Characters considered part of a word when double clicking. In
 #: addition to these characters any character that is marked as an
@@ -318,22 +318,22 @@
 #: clicks (in seconds). Negative numbers will use the system default
 #: instead, if available, or fallback to 0.5.
 
-# focus_follows_mouse no
+ focus_follows_mouse no
 
 #: Set the active window to the window under the mouse when moving the
 #: mouse around
 
-# pointer_shape_when_grabbed arrow
+ pointer_shape_when_grabbed arrow
 
 #: The shape of the mouse pointer when the program running in the
 #: terminal grabs the mouse. Valid values are: arrow, beam and hand
 
-# default_pointer_shape beam
+ default_pointer_shape beam
 
 #: The default shape of the mouse pointer. Valid values are: arrow,
 #: beam and hand
 
-# pointer_shape_when_dragging beam
+ pointer_shape_when_dragging beam
 
 #: The default shape of the mouse pointer when dragging across text.
 #: Valid values are: arrow, beam and hand
@@ -369,11 +369,11 @@
 #: keyboard repeat rate, you may notice some slight input latency. If
 #: so, set this to no.
 
-#: }}}
+ #: }}}
 
-#: Terminal bell {{{
+# : Terminal bell {{{
 
- enable_audio_bell yes
+ enable_audio_bell no
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
@@ -534,9 +534,9 @@
 #: the entire application (all OS windows, via the quit action).
 
 
-#: }}}
+ #: }}}
 
-#: Tab bar {{{
+# : Tab bar {{{
 
  tab_bar_edge bottom
 
@@ -624,7 +624,7 @@
 
  #: }}}
 
-#: Color scheme {{{
+#:  Color scheme {{{
 
  foreground #ebdbb2
  background #282828
@@ -763,7 +763,7 @@
 
 
 #: }}}
-# Clipboard {{{
+# C lipboard {{{
 map ctrl+shift+v        paste_from_clipboard
 map ctrl+shift+s        paste_from_selection
 map ctrl+shift+c        copy_to_clipboard
@@ -785,7 +785,7 @@ map ctrl+shift+page_down scroll_page_down
 map ctrl+shift+home      scroll_home
 map ctrl+shift+end       scroll_end
 map ctrl+shift+h         show_scrollback
-# }}}
+# }} }
 #
 #: Advanced {{{
 
