--- a/.config/picom/compton.conf
+++ b/.config/picom/compton.conf
@@ -94,7 +94,7 @@ active-opacity = 1;
 frame-opacity = 0.7;
 inactive-opacity-override = false;
 alpha-step = 0.06;
-opacity-rule=["90:class_g='Kitty'"];
+#opacity-rule=["90:class_g='Zathura', 'Alacritty'"];
 
 #  Dim inactive windows. (0.0 - 1.0)
 #inactive-dim = 0.2;
@@ -114,8 +114,8 @@ blur-background-exclude = [
     "window_type = 'desktop'",
     "_GTK_FRAME_EXTENTS@:c"
 ];
-#  Specify a list of opacity rules.
-#opacity-rule = [ "80:class_g = 'URxvt'" ];
+# Specify a list of opacity rules.
+# pacity-rule = [ "80:class_g = 'Zathura'" ];
 
 #################################
 #
