--- a/.config/termite/config
+++ b/.config/termite/config
@@ -6,8 +6,7 @@ cell_height_scale = 1.0
 cell_width_scale = 1.0
 clickable_url = true
 dynamic_title = true
-#font = SourceCodePro 8
-font = Hack 8
+font = Iosevka Nerd Font 8
 #fullscreen = true
 icon_name = terminal
 mouse_autohide = false
