--- a/.config/i3/config
+++ b/.config/i3/config
@@ -49,7 +49,7 @@ bindsym XF86MonBrightnessUp exec xbacklight -inc 20
 bindsym XF86MonBrightnessDown exec xbacklight -dec 20 
 
 # is used in the bar {} block below.
-font terminess:monospace 9
+font terminess:Iosevka Nerd Font 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -66,7 +66,7 @@ font terminess:monospace 9
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec termite
+bindsym $mod+Return exec kitty
 
 # Multi-screen screenshots with scrot
 bindsym --release $mod+p exec scrot 'screenshot_%Y%m%d_%H%M%S.png' -e 'mkdir -p ~/Pictures/Screenshots && mv $f ~/Pictures/Screenshots && xclip -selection clipboard -t image/png -i ~/Pictures/Screenshots/`ls -1 -t ~/Pictures/Screenshots | head -1`'
@@ -241,7 +241,7 @@ bindsym $mod+o exec sh ~/Scripts/colorPicker.sh
 #bindsym $mod+p move workspace to output right
 
 # Start polybar to display a workspace bar
-#exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 #exec rofi-network manager
 bindsym $mod+c exec sh ~/.local/bin/nmcli-rofi
@@ -256,5 +256,5 @@ exec_always --no-startup-id blueman-applet
 #setting gaps
 gaps inner 12
 gaps outer 3
-
-for_window [class="^.*"] border none
+for_window [class="^.*"] border pixel 0
+#for_window [class="^.*"] border none
