--- a/.config/i3/config
+++ b/.config/i3/config
@@ -2,6 +2,7 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
+set $ter kitty
 set $mod Mod4
 
 # Set colors from Xresources
@@ -28,7 +29,7 @@ bindsym $mod+d exec --no-startup-id "rofi -show drun -font \\"Hack 9\\" -run-she
 # eh 2 -run-shell-command '{terminal} -e \\" {cmd}; read -n 1 -s\\"'"
 
 # Reloading Telegram
-#bindsym $mod+Shift+t exec killall telegram-deskto && telegram-desktop
+bindsym $mod+Shift+t exec killall telegram-deskto && telegram-desktop
 
 # Changing screen output
 #bindsym $mod+Shift+w exec sh ~/Scripts/autostart_screen.sh
@@ -39,6 +40,7 @@ bindsym $mod+d exec --no-startup-id "rofi -show drun -font \\"Hack 9\\" -run-she
 # Locker
 bindsym $mod+l exec sh ~/Scripts/my-i3lock-config.sh
 
+exec --no-startup-id xss-lock lock
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl -- set-sink-volume 0 +5%
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl -- set-sink-volume 0 -5% 
@@ -49,7 +51,7 @@ bindsym XF86MonBrightnessUp exec xbacklight -inc 20
 bindsym XF86MonBrightnessDown exec xbacklight -dec 20 
 
 # is used in the bar {} block below.
-font terminess:Iosevka Nerd Font 9
+font pango:Iosevka Nerd Font 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -74,6 +76,7 @@ bindsym --release $mod+p exec scrot 'screenshot_%Y%m%d_%H%M%S.png' -e 'mkdir -p 
 # OSX-like area selection screenshots
 bindsym --release $mod+s exec scrot -s 'screenshot_%Y%m%d_%H%M%S.png' -e 'mkdir -p ~/Pictures/Screenshots && mv $f ~/Pictures/Screenshots && xclip -selection clipboard -t image/png -i ~/Pictures/Screenshots/`ls -1 -t ~/Pictures/Screenshots | head -1`' 
 
+#bindsym $mod+Shift+F4 exec --no-startup-id scrot -u -e 'feh $f -x' & notify-send -i ~/.icons/Reversal-grey/apps/scalable/digikam.svg " Screenshot "  
 # kill focused window
 bindsym $mod+Shift+q kill
 
@@ -89,8 +92,6 @@ bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
-
-
 
 # move focused window
 bindsym $mod+Shift+j move left
@@ -128,7 +129,7 @@ bindsym $mod+a focus parent
 # We use variables to avoid repeating the names in multiple places.
 set $ws1 "1"
 set $ws2 "2"
-
+set $ws3 "3"
 set $ws4 "4"
 set $ws5 "5"
 set $ws6 "6"
@@ -169,8 +170,10 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
+
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
+
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Are you sure you want me to die?' -B 'Yes :(' 'i3-msg exit'"
 
@@ -201,6 +204,9 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+#bar {
+#        status_command -c ~/.config/py3status/i3status.conf
+#}
 #Logout and shutdown
 bindsym $mod+Escape exec "~/.local/bin/shutdown"
 
@@ -225,17 +231,16 @@ mode "$mode_system" {
 # FLOATING APPLICATIONS
 for_window [class="Thunar"] floating enable
 for_window [class="kitty"] floating enable
-for_window [class="Gnome-terminal"] floating enable
 for_window [class="Pavucontrol"] floating enable
 for_window [class="Lxappearance"] floating enable
 for_window [class="Blueman-manager"] floating enable
-for_window [class="Kvantum Manager"] floating enable
+for_window [window_role="pop-up"] floating enable
+for_window [window_role="task_dialog"] floating enable
+for_window [class="(?i)mplayer"] floating enable
+for_window [title="Preferences$"] floating enable
 
 #Draw a border around adjecent containers
 smart_borders on
-
-# Color picker
-bindsym $mod+o exec sh ~/Scripts/colorPicker.sh
 
 # Moving workspaces between screens 
 #bindsym $mod+p move workspace to output right
@@ -246,15 +251,30 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 #exec rofi-network manager
 bindsym $mod+c exec sh ~/.local/bin/nmcli-rofi
 
+#Open zathura history
+bindsym $mod+z exec ~/.local/bin/docu
+
 # Initial commands that execute on i3 start.
-#exec_always --no-startup-id sh ~/Scripts/autostart_screen.sh
 exec_always --no-startup-id sh ~/.config/i3/startup_wallpapers.sh
 exec_always picom --config /home/stanoo/.config/picom/compton.conf
 exec_always --no-startup-id ~/.local/bin/xinput-tab
 exec_always --no-startup-id blueman-applet
+exec_always --no-startup-id autotiling
+#exec --no-startup-id i3-msg 'workspace $ws3; exec' $ter' -e ranger; workspace $ws1'
 
 #setting gaps
-gaps inner 12
-gaps outer 3
-for_window [class="^.*"] border pixel 0
-#for_window [class="^.*"] border none
+#gaps inner 6
+#gaps outer 6
+
+for_window [class="^.*"] border pixel 1
+gaps inner 10
+gaps outer 10
+gaps bottom 10
+gaps top 35
+# Dropdown/scratchpad window
+for_window [instance="dropdown"] floating enable
+for_window [instance="dropdown"] resize set 625 400
+for_window [instance="dropdown"] move position center
+for_window [instance="dropdown"] move scratchpad
+exec --no-startup-id alcritty -name dropdown
+bindsym $mod+Shift+Tab [instance="dropdown"] scratchpad show; move position center
