--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
- font_family      Iosevka Nerd Font      
+ font_family      "MesloLGS NF"      
  #SpaceMono-Regular
  bold_font        auto
  italic_font      auto
