--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,8 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
- font_family      "MesloLGS NF"      
- #SpaceMono-Regular
+ font_family      SpaceMono-Regular
  bold_font        auto
  italic_font      auto
  bold_italic_font auto
@@ -696,6 +695,8 @@ scrollback_lines 2000
 #: The 16 terminal colors. There are 8 basic colors, each color has a
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
+
+include ~/.cache/wal/colors-kitty.conf
 
  color0 #000000
  color8 #767676
