--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -48,6 +48,8 @@ pid_file			"~/.config/mpd/pid"
 # state will be reset on server start up.
 #
 state_file			"~/.config/mpd/state"
+
+state_file_interval               "1"
 #
 # The location of the sticker database.  This is a database which
 # manages dynamic information attached to songs.
@@ -201,15 +203,15 @@ input {
 #
 # An example of an ALSA output:
 #
-#audio_output {
-#	type		"alsa"
-#	name		"My ALSA Device"
-#	device		"hw:0,0"	# optional
-#	mixer_type      "hardware"	# optional
-#	mixer_device	"default"	# optional
-#	mixer_control	"PCM"		# optional
-#	mixer_index	"0"		# optional
-#}
+audio_output {
+	type		"pulse"
+	name		"My Pulse Device"
+	#device		"hw:0,0"	# optional
+	#mixer_type      "hardware"	# optional
+	#mixer_device	"default"	# optional
+	#mixer_control	"PCM"		# optional
+	#mixer_index	"0"		# optional
+}
 #
 # An example of an OSS output:
 #
@@ -273,13 +275,13 @@ input {
 #
 # An example of a pulseaudio output (streaming to a remote pulseaudio server)
 #
-audio_output {
-	type		"pulse"
-	name		"My Pulse Output"
-	server		"remote_server"		# optional
-	sink		"remote_server_sink"	# optional
-	media_role	"media_role"		#optional
-}
+#audio_output {
+#	type		"pulse"
+#	name		"My Pulse Output"
+#	server		"remote_server"		# optional
+#	sink		"remote_server_sink"	# optional
+#	media_role	"media_role"		#optional
+#}
 #
 # An example of a winmm output (Windows multimedia API).
 #
