--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -28,6 +28,9 @@ mpd_host = localhost
 mpd_port = 6600
 #
 mpd_connection_timeout = 5
+
+#show cover-art on music
+execute_on_song_change="~/.config/ncmpcpp/ncmpcpp-ueberzug/ncmpcpp_cover_art.sh"
 #
 ## Needed for tag editor and file operations to work.
 ##
@@ -98,7 +101,7 @@ visualizer_in_stereo = yes
 #
 ## Available values: spectrum, wave, wave_filled, ellipse.
 ##
-visualizer_type = spectrum
+visualizer_type = ellipse
 #
 visualizer_fps = 60
 #
@@ -340,7 +343,7 @@ song_columns_list_format = (20)[]{a} (6f)[green]{NE} (50)[white]{t|f:Title} (20)
 ##
 ## Note: Possible display modes: classic, columns.
 ##
-playlist_display_mode = columns
+playlist_display_mode = classic
 #
 #browser_display_mode = classic
 #
@@ -372,13 +375,13 @@ centered_cursor = no
 #progressbar_look = "┅┅┄"
 #progressbar_look = "─⊙┄"
 #progressbar_look = "─➞─"
-progressbar_look = "─┅─"
+#progressbar_look = "─┅─"
 #progressbar_look = "▪▪▪"
 #progressbar_look = "▪▪▫"
 #progressbar_look = "───"
 #progressbar_look = "▁▁▁"
 #progressbar_look = "‒‒‒"
-#progressbar_look = "■◣ "
+progressbar_look = "■◣ "
 #progressbar_look = "◈◆◇
 #"progressbar_look = =>
 #
