--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
- font_family      SpaceMono-Regular
+ font_family      SpaceMonoForPowerline-Regular
  bold_font        auto
  italic_font      auto
  bold_italic_font auto
