--- a/.config/i3/config
+++ b/.config/i3/config
@@ -38,9 +38,11 @@ bindsym $mod+Shift+t exec killall telegram-desktop && telegram-desktop
 #bindsym $mod+Shift+z exec sh ~/Scripts/random_wallpapers.sh
 
 # Locker
-bindsym $mod+l exec sh i3lock.sh
+bindsym $mod+l exec sh lock 
 
-exec --no-startup-id xss-lock i3lock.sh
+#Use light locker to lock after timeout
+exec --no-startup-id xss-lock dm-tool switch-to-greeter
+
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl -- set-sink-volume 0 +5%
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl -- set-sink-volume 0 -5% 
@@ -83,7 +85,7 @@ bindsym --release $mod+p exec scrot 'screenshot_%Y%m%d_%H%M%S.png' -e 'mkdir -p 
 # OSX-like area selection screenshots
 #bindsym --release $mod+s exec scrot -s 'screenshot_%Y%m%d_%H%M%S.png' -e 'mkdir -p ~/Pictures/Screenshots && mv $f ~/Pictures/Screenshots && xclip -selection clipboard -t image/png -i ~/Pictures/Screenshots/`ls -1 -t ~/Pictures/Screenshots | head -1`' 
 
-#bindsym $mod+Shift+F4 exec --no-startup-id scrot -u -e 'feh $f -x' & notify-send -i ~/.icons/Reversal-grey/apps/scalable/digikam.svg " Screenshot "  
+bindsym $mod+Shift+p exec --no-startup-id scrot -u -e 'feh $f -x' & notify-send -i ~/.icons/Reversal-grey/apps/scalable/digikam.svg " Screenshot "  
 # kill focused window
 bindsym $mod+Shift+q kill
 
@@ -145,11 +147,16 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
-# toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
-
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
+
+# toggle tiling / floating
+bindsym $mod+Shift+space floating toggle ;; resize set 600 400  ;; move window to position 20 px 40 px  ;; mode "moveit"
+#bindsym $mod+shift+space floating toggle ;; resize set 600 400  ;; move window to position 1307 px 40 px  ;; mode "moveit"
+#bindsym $mod+control+space floating toggle ;; resize set 850 850  ;; move window to position 60 px 100 px  ;; mode "moveit"
+
+
+
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -214,9 +221,11 @@ bindsym $mod+r mode "resize"
 #bar {
 #        status_command -c ~/.config/py3status/i3status.conf
 #}
-#Logout and shutdown
-bindsym $mod+Escape exec "~/.local/bin/shutdown"
 
+#Logout and shutdown
+#bindsym $mod+Escape exec sh /home/stanoo/.config/rofi/powermenu.sh
+#powermenu/powermenu.sh
+bindsym $mod+Escape exec  ~/.local/bin/shutdown.sh &
 #bindsym $mod+Escape mode "$mode_system"
  
 set $mode_system (e) Logout, (s) Suspend, (r) Reboot, (p) Shutdown
@@ -237,7 +246,7 @@ mode "$mode_system" {
 
 # FLOATING APPLICATIONS
 for_window [class="Thunar"] floating enable
-for_window [class="alacritty"] floating enable; resize set 640 320
+for_window [class="urxvt"] floating enable; resize set 640 320
 for_window [class="Pavucontrol"] floating enable
 for_window [class="Lxappearance"] floating enable
 for_window [class="Blueman-manager"] floating enable
@@ -245,12 +254,19 @@ for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 for_window [class="(?i)mplayer"] floating enable
 for_window [title="Preferences$"] floating enable
+for_window [class="xdman-Main"] floating enable
 
 #Draw a border around adjecent containers
 smart_borders on
 
 #Automatic back-and-forth when switching to the current workspace
 workspace_auto_back_and_forth yes
+
+#Switch between workspaces
+#bindsym Mod1+Tab workspace next
+#bindsym Mod1+Shift+Tab workspace prev
+bindsym $mod+Tab exec --no-startup-id ~/.local/bin/next-workspace
+bindsym $mod+Shift+Tab exec --no-startup-id ~/.local/bin/next-workspace --move-window-and-follow
 
 #Delaying urgency hint reset on workspace change
 force_display_urgency_hint 500 ms
@@ -268,14 +284,17 @@ bindsym $mod+c exec sh ~/.local/bin/nmcli-rofi
 bindsym $mod+z exec ~/.local/bin/docu
 
 # Initial commands that execute on i3 start.
-exec_always --no-startup-id wal -R
+#exec_always --no-startup-id wal -R
 exec_always picom --config /home/stanoo/.config/picom/compton.conf 
 exec_always --no-startup-id ~/.local/bin/xinput-tab
 exec_always --no-startup-id blueman-applet
 exec_always --no-startup-id autotiling
 #exec_always --no-startup-id ~/.local/bin/external_screen.sh
-#exec_always --no-startup-id feh --no-fehbg --bg-fill '/home/stanoo/Pictures/base.png' 
+exec_always --no-startup-id feh --no-fehbg --bg-fill '/home/stanoo/Pictures/greeter.png' 
+exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
+#
+exec --no-startup-id ~/.local/bin/column-layout
 #feh --bg-fill -z ~/.local/walls &
 
 #Gap rules
@@ -291,11 +310,21 @@ gaps top 35
 #bindsym $mod+Shift+s scratchpad show
 
 #Drop down terminal
-for_window [instance="dropdown"] floating enable 
-for_window [instance="dropdown"] resize set 640 320 
-for_window [instance="dropdown"] move scratchpad 
-exec --no-startup-id kitty --name dropdown
+#exec --no-startup-id kitty --name dropdown
+#for_window [instance="dropdown"] floating enable 
+#for_window [instance="dropdown"] resize set 640 320 
+#for_window [instance="dropdown"] move scratchpad 
+
+exec --no-startup-id kitty --name dropdown 
+for_window [instance="dropdown"] floating enable, border none, move absolute \
+position 280px 0px, resize set 723px 226px, move scratchpad
+bindsym $mod+Shift+d [instance="dropdown"] scratchpad show
 
 #Show dropdown terminal
-bindsym $mod+Shift+d [instance="dropdown"] scratchpad show; [instance="dropdown"] move position center
-bindsym $mod+Shift+s exec --no-startup-id kitty --name dropdown
+#bindsym $mod+Shift+d [instance="dropdown"] scratchpad show; [instance="dropdown"] move position center
+
+#bindsym $mod+Shift+s exec --no-startup-id kitty --name dropdown
+
+#exec_always --no-startup-id kitti3
+#bindsym $mod+Shift+s nop kitti3
+
