--- a/.config/termite/config
+++ b/.config/termite/config
@@ -6,7 +6,14 @@ cell_height_scale = 1.0
 cell_width_scale = 1.0
 clickable_url = true
 dynamic_title = true
-font = Iosevka Nerd Font 8
+font = Cascadia Code, Anonymice Nerd Font 9 
+#font = JetBrainsMono Nerd Font 10 
+#font = Ubuntu Mono derivative Powerline 9
+#font = OverpassMono Nerd Font 10 
+#font = FantasqueSansMono Nerd Font 10 
+#font = mplus Nerd Font Mono 9 
+#font = NovaMono for Powerline 9
+#font = Source Code Pro for Powerline 9 
 #fullscreen = true
 icon_name = terminal
 mouse_autohide = false
@@ -48,10 +55,10 @@ scrollbar = off
 
 foreground = #ABB2BF
 #foreground_bold = #ffffff
-#background = #3f3f3f
+background = #3f3f3f
 
 # 20% background transparency (requires a compositor)
-background = rgba(40, 44, 52, 0.80)
+#background = rgba(40, 44, 52, 0.80)
 
 # If unset, will reverse foreground and background
 highlight = #2f2f2f
@@ -80,7 +87,7 @@ color15 = #ffffff
 #background = #3f3f3f
 #active_foreground = #e68080
 #active_background = #3f3f3f
-#padding = 2
+padding = 2
 #border = #3f3f3f
 #border_width = 0.5
 #roundness = 2.0
