--- a/.config/cava/config
+++ b/.config/cava/config
@@ -4,39 +4,39 @@
 [general]
 
 # Smoothing mode. Can be 'normal', 'scientific' or 'waves'. DEPRECATED as of 0.6.0
- mode = normal
+; mode = normal
 
 # Accepts only non-negative values.
- framerate = 60
+; framerate = 60
 
 # 'autosens' will attempt to decrease sensitivity if the bars peak. 1 = on, 0 = off
 # new as of 0.6.0 autosens of low values (dynamic range)
 # 'overshoot' allows bars to overshoot (in % of terminal height) without initiating autosens. DEPRECATED as of 0.6.0
- autosens = 1
- overshoot = 20
+; autosens = 1
+; overshoot = 20
 
 # Manual sensitivity in %. Autosens must be turned off for this to take effect.
 # 200 means double height. Accepts only non-negative values.
- sensitivity = 100
+; sensitivity = 100
 
 # The number of bars (0-200). 0 sets it to auto (fill up console).
 # Bars' width and space between bars in number of characters.
- bars = 0
- bar_width = 2
- bar_spacing = 1
+; bars = 0
+; bar_width = 2
+; bar_spacing = 1
 
 
 # Lower and higher cutoff frequencies for lowest and highest bars
 # the bandwidth of the visualizer.
 # Note: there is a minimum total bandwidth of 43Mhz x number of bars.
 # Cava will automatically increase the higher cutoff if a too low band is specified.
- lower_cutoff_freq = 50
- higher_cutoff_freq = 10000
+; lower_cutoff_freq = 50
+; higher_cutoff_freq = 10000
 
 
 # Seconds with no input before cava goes to sleep mode. Cava will not perform FFT or drawing and
 # only check for input once per second. Cava will wake up once input is detected. 0 = disable.
- sleep_timer = 0
+; sleep_timer = 0
 
 
 [input]
@@ -59,10 +59,10 @@
 ; method = alsa
 ; source = hw:Loopback,1
 
- method = fifo
- source = /tmp/mpd.fifo
- sample_rate = 44100
- sample_bits = 16
+; method = fifo
+; source = /tmp/mpd.fifo
+; sample_rate = 44100
+; sample_bits = 16
 
 ; method = shmem
 ; source = /squeezelite-AA:BB:CC:DD:EE:FF
@@ -80,31 +80,31 @@
 # 'raw' is an 8 or 16 bit (configurable via the 'bit_format' option) data
 # stream of the bar heights that can be used to send to other applications.
 # 'raw' defaults to 200 bars, which can be adjusted in the 'bars' option above.
- method = ncurses
+; method = ncurses
 
 # Visual channels. Can be 'stereo' or 'mono'.
 # 'stereo' mirrors both channels with low frequencies in center.
 # 'mono' outputs left to right lowest to highest frequencies.
 # 'mono_option' set mono to either take input from 'left', 'right' or 'average'.
- channels = stereo
- mono_option = average
+; channels = stereo
+; mono_option = average
 
 # Raw output target. A fifo will be created if target does not exist.
- raw_target = /dev/stdout
+; raw_target = /dev/stdout
 
 # Raw data format. Can be 'binary' or 'ascii'.
- data_format = binary
+; data_format = binary
 
 # Binary bit format, can be '8bit' (0-255) or '16bit' (0-65530).
- bit_format = 16bit
+; bit_format = 16bit
 
 # Ascii max value. In 'ascii' mode range will run from 0 to value specified here
- ascii_max_range = 1000
+; ascii_max_range = 1000
 
 # Ascii delimiters. In ascii format each bar and frame is separated by a delimiters.
 # Use decimal value in ascii table (i.e. 59 = ';' and 10 = '\n' (line feed)).
- bar_delimiter = 59
- frame_delimiter = 10
+; bar_delimiter = 59
+; frame_delimiter = 10
 
 
 
@@ -115,41 +115,42 @@
 # ncurses output method and a terminal that can change color definitions such as Gnome-terminal or rxvt.
 # if supported, ncurses mode will be forced on if user defined colors are used.
 # default is to keep current terminal color
- background = default
- foreground = default
+; background = default
+; foreground = default
 
 # Gradient mode, only hex defined colors (and thereby ncurses mode) are supported,
 # background must also be defined in hex  or remain commented out. 1 = on, 0 = off.
 # You can define as many as 8 different colors. They range from bottom to top of screen
- gradient = 1
- gradient_count = 8
- gradient_color_1 = '#59cc33'
- gradient_color_2 = '#80cc33'
- gradient_color_3 = '#a6cc33'
- gradient_color_4 = '#cccc33'
- gradient_color_5 = '#cca633'
- gradient_color_6 = '#cc8033'
- gradient_color_7 = '#cc5933'
- gradient_color_8 = '#cc3333'
+; gradient = 1
+; gradient_count = 8
+; gradient_color_1 = '#59cc33'
+; gradient_color_2 = '#80cc33'
+; gradient_color_3 = '#a6cc33'
+; gradient_color_4 = '#cccc33'
+; gradient_color_5 = '#cca633'
+; gradient_color_6 = '#cc8033'
+; gradient_color_7 = '#cc5933'
+; gradient_color_8 = '#cc3333'
+
 
 
 [smoothing]
 
 # Percentage value for integral smoothing. Takes values from 0 - 100.
 # Higher values means smoother, but less precise. 0 to disable.
- integral = 77
+; integral = 77
 
 # Disables or enables the so-called "Monstercat smoothing" with or without "waves". Set to 0 to disable.
- monstercat = 0
- waves = 0
+; monstercat = 0
+; waves = 0
 
 # Set gravity percentage for "drop off". Higher values means bars will drop faster.
 # Accepts only non-negative values. 50 means half gravity, 200 means double. Set to 0 to disable "drop off".
- gravity = 100
+; gravity = 100
 
 
 # In bar height, bars that would have been lower that this will not be drawn.
- ignore = 0
+; ignore = 0
 
 
 [eq]
@@ -157,8 +158,8 @@
 # This one is tricky. You can have as much keys as you want.
 # Remember to uncomment more then one key! More keys = more precision.
 # Look at readme.md on github for further explanations and examples.
- 1 = 1 # bass
- 2 = 1
- 3 = 1 # midtone
- 4 = 1
- 5 = 1 # treble
+; 1 = 1 # bass
+; 2 = 1
+; 3 = 1 # midtone
+; 4 = 1
+; 5 = 1 # treble
