--- a/.config/termite/config
+++ b/.config/termite/config
@@ -6,8 +6,7 @@ cell_height_scale = 1.0
 cell_width_scale = 1.0
 clickable_url = true
 dynamic_title = true
-font = Cascadia Code, Anonymice Nerd Font 9 
-#font = JetBrainsMono Nerd Font 10 
+font = Cascadia Code, JetBrainsMono Nerd Font 9
 #font = Ubuntu Mono derivative Powerline 9
 #font = OverpassMono Nerd Font 10 
 #font = FantasqueSansMono Nerd Font 10 
