--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -38,7 +38,7 @@ txt2 = #000000
 
 [bar/main]
 width = 97%
-height = 26.5
+height = 18.5
 offset-x = 1.5%
 offset-y = 1.5%
 bottom = false
@@ -96,9 +96,9 @@ override-redirect = true
 ;; ;-   module position  -; ;;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-modules-left = time txt i3 rounded-right-colored-two mpd rounded-right-colored
+modules-left = time i3 mpd
 modules-center = cava
-modules-right =  rounded-left-colored-two wlan elipse memory rounded-left-colored-two volume rounded-left-colored date rounded-left-colored-three battery
+modules-right = wlan memory volume date battery
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; ;- module position end-; ;;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -113,7 +113,7 @@ type = custom/text
 content = "%{T5}%{T-}"
 content-font = 2
 content-foreground = #362d58
-content-background = #bc5068
+content-background = ${color.bg4}
 
 
 [module/rounded-right-colored]
@@ -146,7 +146,6 @@ type = custom/text
 content = %{T5}%{T-}
 content-foreground = ${color.bg4}
 content-background = ${color.alpha}
-
 
 [module/rounded-left-colored-three]
 type = custom/text
@@ -369,7 +368,7 @@ format-padding = 2
 type = internal/date
 interval = 1.0
 label =  %date%
-label-padding = 0
+label-padding = 1
 label-background = ${color.bg5}
 label-foreground = ${color.txt}
 date =  %a %d/%m%
@@ -467,7 +466,7 @@ format-padding = 2
 
 [module/txt]
 type = custom/text
-content ="    " 
+content =" " 
 content-background = #000000
 ;content-foreground = ${color.txt}
 ;content-padding = 
