--- a/.config/i3/config
+++ b/.config/i3/config
@@ -5,9 +5,18 @@
 #set wal colors
 exec_always --no-startup-id wal -i "$(< "${HOME}/.cache/wal/wal")" 
 
+# Terminal variable
+set $term alacritty
+
 #set $term alacritty
 set $mod Mod4
 
+
+# Use Mouse+$mod to drag floating windows to their wanted position
+floating_modifier $mod
+
+# start a terminal
+bindsym $mod+Return exec alacritty
 # Set colors from Xresources
 # Change 'color7' and 'color2' to whatever colors you want i3 to use 
 # from the generated scheme.
@@ -47,21 +56,37 @@ bindsym $mod+l exec sh lock
 #Use light locker to lock after timeout
 exec --no-startup-id xss-lock dm-tool switch-to-greeter
 
-# Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl -- set-sink-volume 0 +5%
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl -- set-sink-volume 0 -5% 
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle 
+# Use pactl to adjust volume in PulseAudio.
+#set $refresh_i3status killall -SIGUSR1 i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id ~/.local/bin/volume-up
+bindsym XF86AudioLowerVolume exec --no-startup-id ~/.local/bin/volume-down
+bindsym XF86AudioMute exec --no-startup-id ~/.local/bin/mute
+bindsym XF86AudioMicMute exec --no-startup-id ~/.local/bin/mic-mute
 
+bindsym XF86MonBrightnessUp exec --no-startup-id ~/.local/bin/light-up
+bindsym XF86MonBrightnessDown exec --no-startup-id ~/.local/bin/light-down
+
+# Volume
+#bindsym XF86AudioRaiseVolume exec --no-startup-id pamixer -i 5
+#bindsym XF86AudioLowerVolume exec --no-startup-id pamixer -d 5
+#bindsym XF86AudioMute        exec --no-startup-id pamixer -t
+
+# mocp
+# run mocp
+bindsym $mod+m exec kitty -e mocp
+
+# Control Songs
+bindsym XF86AudioPlay  exec --no-startup-id mocp -G
+bindsym XF86AudioPause exec --no-startup-id mocp -G
+bindsym XF86AudioNext  exec --no-startup-id mocp -f
+bindsym XF86AudioPrev  exec --no-startup-id mocp -r
+bindsym XF86AudioStop  exec --no-startup-id mocp -s
 
 # Music Player controls
-bindsym XF86AudioPlay		exec playerctl play
-bindsym XF86AudioPause		exec playerctl pause
-bindsym XF86AudioNext		exec playerctl next
-bindsym XF86AudioPrev		exec playerctl previous
-
-# Sreen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 20 
-bindsym XF86MonBrightnessDown exec xbacklight -dec 20 
+#bindsym XF86AudioPlay		exec playerctl play
+#bindsym XF86AudioPause		exec playerctl pause
+#bindsym XF86AudioNext		exec playerctl next
+#bindsym XF86AudioPrev		exec playerctl previous
 
 # is used in the bar {} block below.
 font pango: Fira Code 9
@@ -77,15 +102,9 @@ font pango: Fira Code 9
 # X core fonts rendering does not support right-to-left and this being a bitmap
 # font, it doesn’t scale on retina/hidpi displays.
 
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
-
-# start a terminal
-bindsym $mod+Return exec termite
-
 # Multi-screen screenshots with scrot
 #bindsym --release $mod+p exec scrot 'screenshot_%Y%m%d_%H%M%S.png' -e 'mv $f ~/Pictures/Screenshots && xclip -selection clipboard -t image/png -i ~/Pictures/Screenshots/`ls -1 -t ~/Pictures/Screenshots | head -1`'
-
+bindsym $mod+Print exec /home/steve/.scripts/screenshot.sh
 # OSX-like area selection screenshots
 bindsym --release $mod+p exec scrot -s 'screenshot_%Y%m%d_%H%M%S.png' -e 'mv $f ~/Pictures/Screenshots && xclip -selection clipboard -t image/png -i ~/Pictures/Screenshots/`ls -1 -t ~/Pictures/Screenshots | head -1`' 
 
@@ -164,11 +183,11 @@ bindsym $mod+Shift+space floating toggle
 
 
 # move the currently focused window to the scratchpad
-bindsym $mod+Shift+minus move scratchpad
+bindsym $mod+Shift+Tab move scratchpad
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
-bindsym $mod+minus scratchpad show
+bindsym $mod+Tab scratchpad show
 
 
 
@@ -269,7 +288,9 @@ for_window [class="(?i)mplayer"] floating enable
 for_window [title="Preferences$"] floating enable
 for_window [class="xdman-Main"] floating enable
 for_window [class="transmission-gtk"] floating enable
-for_window [class="telegram-desktop"] floating enable
+for_window [class="TelegramDesktop"] floating enable
+#for_window [class="TelegramDesktop"] floating enable; resize set 640 320; move position center
+for_window [class="wpg"] floating enable
 
 #Draw a border around adjecent containers
 smart_borders on
@@ -280,8 +301,8 @@ workspace_auto_back_and_forth yes
 #Switch between workspaces
 #bindsym Mod1+Tab workspace next
 #bindsym Mod1+Shift+Tab workspace prev
-bindsym $mod+Tab exec --no-startup-id ~/.local/bin/next-workspace
-bindsym $mod+Shift+Tab exec --no-startup-id ~/.local/bin/next-workspace --move-window-and-follow
+#bindsym $mod+Tab exec --no-startup-id ~/.local/bin/next-workspace
+#bindsym $mod+Shift+Tab exec --no-startup-id ~/.local/bin/next-workspace --move-window-and-follow
 
 #Delaying urgency hint reset on workspace change
 force_display_urgency_hint 500 ms
@@ -289,11 +310,13 @@ force_display_urgency_hint 500 ms
 # Moving workspaces between screens 
 #:bindsym $mod+p move workspace to output right
 popup_during_fullscreen smart
+
 # Start polybar to display a workspace bar
 exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 #Lauch cava in polybar
 exec --no-startup-id cava -p ~/.config/cava/polybar.conf
+
 #exec rofi-network manager
 bindsym $mod+c exec sh ~/.local/bin/nmcli-rofi
 
@@ -330,7 +353,7 @@ gaps top 35
 #for_window [instance="dropdown"] resize set 640 320 
 #for_window [instance="dropdown"] move scratchpad 
 
-exec --no-startup-id termite --name dropdown 
+exec --no-startup-id kitty --name dropdown 
 for_window [instance="dropdown"] floating enable, border none, move absolute \
 position 280px 0px, resize set 723px 426px, move scratchpad
 bindsym $mod+Shift+d [instance="dropdown"] scratchpad show
