--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -405,6 +405,6 @@ audio_output {
 # If file or directory names do not display correctly for your locale then you 
 # may need to modify this setting.
 #
-filesystem_charset		"UTF-8"
+#filesystem_charset		"UTF-8"
 #
 ###############################################################################
