Added ranger alacritty and zsh

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -225,7 +225,7 @@ format-disconnected-padding = 1
 tail = true
 ;label-connected = %essid% %downspeed%
 ;label-connected-foreground = ${color.txt}
-label-connected = 直 %downspeed%
+label-connected = 直 %essid% %downspeed%
 label-disconnected = 睊
 ;ramp-signal-0 = 直
 ;ramp-signal-foreground = ${color.txt}
