--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -104,14 +104,16 @@ visualizer_in_stereo = yes
 #
 ## Available values: spectrum, wave, wave_filled, ellipse.
 ##
-visualizer_type = ellipse
+visualizer_type =ellipse 
 #
 visualizer_fps = 60
 #
 visualizer_autoscale = no
 #
-visualizer_look = ●▮
 #
+
+visualizer_look = "+|"
+#visualizer_look = ●▮
 #visualizer_color = blue, cyan, green, yellow, magenta, red
 #
 ## Alternative subset of 256 colors for terminals that support it.
