--- a/.config/i3/config
+++ b/.config/i3/config
@@ -251,9 +251,23 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-#bar {
-#        status_command -c ~/.config/py3status/i3status.conf
-#}
+bar {
+	font pango:Hack 8
+	position bottom
+	tray_output none
+	status_command ~/.local/bin/bumblebee-status -m mpd weather nic traffic xrandr load cpu pasink pasource \
+	date time battery -p cpu.interval=5s time.format="%H:%M" traffic.exclude=lo,vmnet1,vmnet8,lxcbr0,docker0,vboxnet,veth,wlp,wwp,br,macvtap0,vibr0,vibr,vnet0,virbr0,virbr1 nic.exclude=lo,docker,vmnet,lxcbr,wwp0s,vboxnet,veth,br,vnet,br-72a8a860a1ae,vibr0-nic,vibr,vnet0,virbr0,virbr1 -t gruvbox-powerline -a cpu load
+ 	colors {
+        active_workspace		$gray $gray $bg
+        focused_workspace		$fg $fg $bg
+        inactive_workspace		$bg $bg $gray
+		urgent_workspace		$bg $yellow $bg
+
+		statusline				$gray
+		background				$bg
+		separator				$yellow
+	}
+}
 
 #Logout and shutdown
 #bindsym $mod+Escape exec sh /home/stanoo/.config/rofi/powermenu.sh
@@ -287,7 +301,7 @@ for_window [window_role="task_dialog"] floating enable
 for_window [class="(?i)mplayer"] floating enable
 for_window [title="Preferences$"] floating enable
 for_window [class="xdman-Main"] floating enable
-for_window [class="transmission-gtk"] floating enable
+for_window [class="Transmission-gtk"] floating enable
 for_window [class="TelegramDesktop"] floating enable
 #for_window [class="TelegramDesktop"] floating enable; resize set 640 320; move position center
 for_window [class="wpg"] floating enable
@@ -312,10 +326,10 @@ force_display_urgency_hint 500 ms
 popup_during_fullscreen smart
 
 # Start polybar to display a workspace bar
-exec_always --no-startup-id ~/.config/polybar/launch.sh
+#exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 #Lauch cava in polybar
-exec --no-startup-id cava -p ~/.config/cava/polybar.conf
+#exec --no-startup-id cava -p ~/.config/cava/polybar.conf
 
 #exec rofi-network manager
 bindsym $mod+c exec sh ~/.local/bin/nmcli-rofi
@@ -340,7 +354,7 @@ for_window [class="^.*"] border pixel 0
 gaps inner 10
 gaps outer 15
 gaps bottom 5
-gaps top 35
+gaps top 3
 
 #Make current focused window a scratchpad
 #bindsym $mod+Shift+d move scratchpad
